projects/compiler/test/typechecker/funcdecl/error_duplicate_param.out
Error at %FILE_NAME%:1:18
Duplicate parameter 'a'
  |  func foo(a: Int, a: Bool) {}
                      ^
